no fixed bg image, too much trouble

--- a/wp-content/themes/snap-child/assets/sass/_nike-page.scss
+++ b/wp-content/themes/snap-child/assets/sass/_nike-page.scss
@@ -425,7 +425,7 @@ a.menu-toggle.menu-close{
 			width: 100%;
 			height: 100%;
 			float: left;
-			position : fixed;
+			position : absolute;
 			@media screen and (min-width: 1100px){
 				position : absolute;
 			}
