--- a/wp-content/themes/snap-child/style.css
+++ b/wp-content/themes/snap-child/style.css
@@ -3186,7 +3186,7 @@ a.menu-toggle.menu-close:after {
   width: 100%;
   height: 100%;
   float: left;
-  position: fixed;
+  position: absolute;
   z-index: -1;
   top: 0;
   left: 0;
